--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "r/NFRealMusic Discord Bot",
+    "name": "r_nfrealmusic_discord_bot",
     "description": "a bot for the r/nfrealmusic discord",
     "version": "0.1.0",
     "maintainers": [
