added guildcreate event that makes an empty file in servers/guildid.json which will include the config etc eventually

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "enmap": "latest",
         "fs": "latest",
         "genius-lyrics-api": "^3.0.3",
+        "mariadb": "^2.5.0",
         "urllib": "latest"
     }
 }
