declared intents added yml dependancy started code for messageUpdate event

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "fs": "latest",
         "genius-lyrics-api": "^3.0.3",
         "mariadb": "^2.5.0",
-        "urllib": "latest"
+        "urllib": "latest",
+        "yaml": "^1.10.0"
     }
 }
